verity-AI/deployment/k8s/k8s-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: verity-ai
  labels:
    name: verity-ai
    environment: production
