verity-AI/deployment/k8s/k8s-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: verity-ai-service
  namespace: default
  labels:
    app: verity-ai
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 6000
    protocol: TCP
    name: http
  selector:
    app: verity-ai
---
apiVersion: v1
kind: Service
metadata:
  name: verity-ai-nodeport
  namespace: default
  labels:
    app: verity-ai
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 6000
    nodePort: 30060
    protocol: TCP
    name: http
  selector:
    app: verity-ai
